Fix overflow-x issue on site

--- a/src/keenanpayne/layout/_mobile-nav.scss
+++ b/src/keenanpayne/layout/_mobile-nav.scss
@@ -16,6 +16,7 @@ $mobileNavTrigger-size: 26px;
 .mobileNav {
   color: white;
   height: 0;
+  left: 0;
   margin: 0;
   opacity: 0;
   pointer-events: none;
